porMIgrar-do/otium.xyz3/A/04-ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secured
spec:
  chain:
    middlewares:
    - name: https-only
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`www.otium.xyz`)
    middlewares:
    - name: https-only
    kind: Rule
    services:
    - name: wordpress
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`www.otium.xyz`)
    kind: Rule
    services:
    - name: wordpress
      port: 80
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute2
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`otium.xyz`)
    middlewares:
    - name: https-only
    kind: Rule
    services:
    - name: wordpress
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls2
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`otium.xyz`)
    kind: Rule
    services:
    - name: wordpress
      port: 80
  tls:
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroutesmtp
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`mail-testing.otium.xyz`)
    middlewares:
    - name: https-only
    kind: Rule
    services:
    - name: posteio
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroutesmtpssl
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`mail-testing.otium.xyz`)
    kind: Rule
    services:
    - name: posteio
      port: 80
  tls:
    certResolver: default
